--- a/app/src/main/res/layout/fragment_reports_container.xml
+++ b/app/src/main/res/layout/fragment_reports_container.xml
@@ -38,7 +38,7 @@
                     <ImageView
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:id="@+id/backButton"
+                        android:id="@+id/backButtonReport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:tint="@color/black"
