--- a/app/src/main/res/layout/fragment_reports_container.xml
+++ b/app/src/main/res/layout/fragment_reports_container.xml
@@ -28,7 +28,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:background="@color/light_red"
+                    android:background="@color/colorOrange55"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
