--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#8CDB7A59</color>
+    <color name="colorPrimaryDark">#8CDB7A59</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="statusColor">#A09E9E</color>
     <color name="black">#192435</color>
     <color name="blackColor">#000000</color>
     <color name="gray">#B6B6B6</color>
