--- a/app/src/main/res/layout/filterbottom_sheet.xml
+++ b/app/src/main/res/layout/filterbottom_sheet.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:behavior_hideable="true"
-    app:cardBackgroundColor="@android:color/transparent"
+    app:cardBackgroundColor="@color/white"
     app:behavior_peekHeight="@dimen/_600sdp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
     <!--<androidx.recyclerview.widget.RecyclerView
@@ -51,7 +51,7 @@
                 android:text="X"
                 android:textColor="@color/black"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"/>
 
             <TextView
