--- a/app/src/main/res/layout/sales_item_adapter.xml
+++ b/app/src/main/res/layout/sales_item_adapter.xml
@@ -105,7 +105,7 @@
             android:id="@+id/moreText"
             android:text="@string/more"
             android:paddingBottom="@dimen/_7sdp"
-            android:drawableStart="@drawable/ic_more"
+            android:drawableEnd="@drawable/ic_more"
             android:drawablePadding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/_10sdp"
