start login api

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="search">#3acdd3e0</color>
     <color name="colorOrange55">#8CDB7A59</color>
     <color name="textColor">#192435</color>
+    <color name="md_red_600">#E53935</color>
     <color name="textColor70">#B3192435</color>
     <color name="selctedOrange">#f2864d</color>
     <color name="white">#FFFFFF</color>
