--- a/app/src/main/res/layout/activity_container_for_fragment.xml
+++ b/app/src/main/res/layout/activity_container_for_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/container"
+    android:fitsSystemWindows="true"
     tools:context=".common.ContainerActivityForFragment">
 
 </FrameLayout>
