--- a/app/src/main/res/layout/fragment_accountant.xml
+++ b/app/src/main/res/layout/fragment_accountant.xml
@@ -52,7 +52,9 @@
                 android:id="@+id/accountantRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_14sdp" />
+                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginBottom="@dimen/_70sdp"
+                />
 
 
         </LinearLayout>
