--- a/app/src/main/res/layout/product_item_adaptor.xml
+++ b/app/src/main/res/layout/product_item_adaptor.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:id="@+id/category_name"
         android:text="الكترونيات"
         android:textAlignment="viewStart"
         android:layout_marginStart="@dimen/_5sdp"
