--- a/app/src/main/res/layout/stored_item_adaptor.xml
+++ b/app/src/main/res/layout/stored_item_adaptor.xml
@@ -1,100 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/itemContainer"
-        android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/productImage"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginStart="@dimen/_15sdp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/ic_product"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:visibility="gone"
-            android:id="@+id/checked"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_product" />
+
+        <ImageView
+            android:id="@+id/checked"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/productImage"
-            app:layout_constraintTop_toTopOf="@id/productImage"
             app:layout_constraintEnd_toStartOf="@+id/productImage"
             app:layout_constraintStart_toStartOf="@+id/productImage"
-            app:srcCompat="@drawable/ic_done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="@id/productImage"
+            app:srcCompat="@drawable/ic_done" />
+
         <TextView
+            android:id="@+id/store_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
             android:text="الكترونيات"
             android:textAlignment="viewStart"
-            android:layout_marginStart="@dimen/_5sdp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/productImage"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/productImage"
-            app:layout_constraintTop_toTopOf="@+id/productImage"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="@+id/productImage" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-<LinearLayout
-android:id="@+id/containerNumber"
-android:layout_marginTop="@dimen/_10sdp"
-android:gravity="center_vertical"
-android:orientation="horizontal"
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
+    <LinearLayout
+        android:id="@+id/containerNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:visibility="gone">
 
 
-<TextView
-    android:textSize="@dimen/_10sdp"
-    android:text="@string/numberof_delivery"
-    android:textColor="@color/black"
-    android:textAlignment="viewStart"
-    android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:text="@string/numberof_delivery"
+            android:textAlignment="viewStart"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_10sdp" />
 
-<ImageView
-    android:id="@+id/plusImage"
-    app:srcCompat="@drawable/ic_plus"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/plusImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_plus" />
 
-<com.google.android.material.card.MaterialCardView
-    android:layout_width="@dimen/_70sdp"
-    app:cardCornerRadius="10dp"
-    app:strokeWidth="1dp"
-    app:strokeColor="@color/light_gray"
-    app:cardElevation="0dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginStart="@dimen/_10sdp"
-    android:layout_height="@dimen/_30sdp">
-    <TextView
-        android:id="@+id/increasementText"
-        android:layout_gravity="center"
-        android:textSize="@dimen/_12sdp"
-        android:text="1"
-        android:textColor="@color/black"
-        android:textAlignment="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-</com.google.android.material.card.MaterialCardView>
-<ImageView
-    android:id="@+id/decreaseImage"
-    android:layout_marginStart="@dimen/_10sdp"
-    app:srcCompat="@drawable/ic_minus"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
-</LinearLayout>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:strokeColor="@color/light_gray"
+            app:strokeWidth="1dp">
+
+            <TextView
+                android:id="@+id/increasementText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="1"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12sdp" />
+        </com.google.android.material.card.MaterialCardView>
+
+        <ImageView
+            android:id="@+id/decreaseImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            app:srcCompat="@drawable/ic_minus" />
+    </LinearLayout>
 </LinearLayout>
