--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,6 +40,7 @@
     <color name="switch_green">#00ad2a</color>
     <color name="logout_red">#d0021b</color>
     <color name="grey_version">#5a5a5a</color>
+    <color name="green_message">#15B70E</color>
 
 
 
